--- a/composer.json
+++ b/composer.json
@@ -28,8 +28,8 @@
     "require": {
         "php": ">=5.6",
         "jane/jane": "dev-master",
-        "jane/runtime": "dev-master as 1.1",
-        "jane/openapi-runtime": "^1.0",
+        "jane/runtime": "dev-master",
+        "jane/openapi-runtime": "dev-master",
         "nikic/php-parser": "^1.4|^2.0",
         "symfony/console": "^2.3|^3.0",
         "doctrine/inflector": "^1.0",
